--- a/config/param.yaml
+++ b/config/param.yaml
@@ -5,35 +5,33 @@ icp_localization:
     z: 0.0 #0.676 # 0.676 for darpa
     roll: 0.0  #rpy in deg
     pitch: 0.0
-    yaw: 0.0 #-7.0 #-30.0 for Hoengg, -90 for Hoengg forest, -7 for darpa
-  imu_data_topic: "/versavis/imu" #"/sensors/imu" #
-  odometry_data_topic: "/msf_core/odometry" #"/camera/odom/sample" "/msf_core/odometry" #
-  num_accumulated_range_data: 1
-  range_data_topic: "/rslidar_points" # "/point_cloud_filter/velodyne/point_cloud_filtered" #
+    yaw: -90.0 #-7.0 #-30.0 for Hoengg, -90 for Hoengg forest, -7 for darpa
+  imu_data_topic: "/xsens_mt/rawImu" #"/sensors/imu" or /xsensmt_node/rawImu #
+  odometry_data_topic: "/camera/odom/sample" #"/camera/odom/sample" "/msf_core/odometry" #
+  num_accumulated_range_data: 32
+  range_data_topic: "/os1_node/packets_as_clouds" # /os1_node/packets_as_clouds or"/point_cloud_filter/velodyne/point_cloud_filtered" #
   is_use_odometry: true
   is_provide_odom_frame: true
   gravity_vector_filter_time_constant: 0.01
   fixed_frame: "map"
-  min_num_odom_msgs_before_ready: 300
+  min_num_odom_msgs_before_ready: 100
 
 
 calibration:
-  imu_to_range_sensor:
-    x: -0.251
-    y: 0.024
-    z: 0.255
-    roll: 0.0
-    pitch: 0.0
-    yaw: 1.571  
-  odometry_source_to_range_sensor:
-    x: -0.251
-    y: 0.024
-    z: 0.255
-    roll: 0.0
-    pitch: 0.0
-    yaw: 1.571  
-
-
+ imu_to_range_sensor:
+   x: -0.041
+   y: 0.034
+   z: -0.057
+   roll: 3.14159
+   pitch: 0.0
+   yaw: -2.79253
+ odometry_source_to_range_sensor:
+   x: -0.076
+   y: -0.024
+   z: 0.034
+   roll: 0.0
+   pitch: 0.0
+   yaw: 0.0 
 
 
 #for the smb
@@ -54,20 +52,20 @@ calibration:
 
 
 #for sensor stick
-#  imu_to_range_sensor:
-#    x: -0.041
-#    y: 0.034
-#    z: -0.057
-#    roll: 3.14159
-#    pitch: 0.0
-#    yaw: -2.79253
-#  odometry_source_to_range_sensor:
-#    x: -0.076
-#    y: -0.024
-#    z: 0.034
-#    roll: 0.0
-#    pitch: 0.0
-#    yaw: 0.0 
+ # imu_to_range_sensor:
+ #   x: -0.041
+ #   y: 0.034
+ #   z: -0.057
+ #   roll: 3.14159
+ #   pitch: 0.0
+ #   yaw: -2.79253
+ # odometry_source_to_range_sensor:
+ #   x: -0.076
+ #   y: -0.024
+ #   z: 0.034
+ #   roll: 0.0
+ #   pitch: 0.0
+ #   yaw: 0.0 
 
 
   # for anymal
