--- a/config/input_filters_velodyne_puck.yaml
+++ b/config/input_filters_velodyne_puck.yaml
@@ -1,11 +1,14 @@
-# these filters get applied to the scans from the range sensor for each scan.
-
+# these filters get applied to the scans from the range sensor every time a scan is received
 - DistanceLimitDataPointsFilter:
-    dim: -1 # -1 means radial distance, 0 is x, 1 is y, 2 is y
-    dist: 20
+    dim: -1 # -1 means radial distance, 0 is x, 1 is y, 2 is z
+    dist: 40
+    removeInside: 0
+- DistanceLimitDataPointsFilter:
+    dim: 2 # -1 means radial distance, 0 is x, 1 is y, 2 is z
+    dist: 40
     removeInside: 0
 - RandomSamplingDataPointsFilter:
-    prob: 0.25
+    prob: 1.0
 - SurfaceNormalDataPointsFilter:
     knn: 8
     epsilon: 0
