--- a/.github/workflows/catkin.yml
+++ b/.github/workflows/catkin.yml
@@ -44,12 +44,5 @@ jobs:
       shell: bash
       run: |
         source /opt/ros/$ROS_DISTRO/setup.bash
-        catkin_make -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-
-    - name: catkin_make run_tests
-      shell: bash
-      run: |
-        source /opt/ros/$ROS_DISTRO/setup.bash
-        catkin_make run_tests
-        catkin_test_results
+        catkin_make_isolated --merge -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 
