also publish range sensor odometry

--- a/config/param.yaml
+++ b/config/param.yaml
@@ -14,6 +14,7 @@ icp_localization:
   is_provide_odom_frame: true
   gravity_vector_filter_time_constant: 0.01
   fixed_frame: "map"
+  range_sensor_frame: "lidar"
   min_num_odom_msgs_before_ready: 5
 
 calibration:
